--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
-.footer{
-    margin-top:100px;
+.footer {
+    margin-top: 100px;
     color: #d9d9d9;
     background-color: #323232;
     display: flex;
@@ -9,45 +9,117 @@
     padding: 20px 8vw;
     padding-top: 80px;
 }
-.footer-content{
+
+.footer-content {
     width: 100%;
     display: grid;
     grid-template-columns: 2fr 1fr 1fr;
     gap: 80px;
 }
-.footer-content-left ,.footer-content-right,.footer-content-center{
+
+.footer-content-left,
+.footer-content-right,
+.footer-content-center {
     display: flex;
     flex-direction: column;
     align-items: start;
     gap: 20px;
 }
-.footer-content-left li ,.footer-content-right li,.footer-content-center li{
+
+.footer-content-left li,
+.footer-content-right li,
+.footer-content-center li {
     list-style: none;
     margin-bottom: 10px;
     cursor: pointer;
 }
-.footer-content-right h2,.footer-content-center h2{
+
+.footer-content-right h2,
+.footer-content-center h2 {
     color: white;
 }
-.footer-social-icons img{
+
+.footer-social-icons img {
     width: 40px;
     margin-right: 15px;
     cursor: pointer;
 }
-.footer hr{
+
+.footer hr {
     width: 100%;
     height: 2px;
     margin: 20px 0px;
     background-color: gray;
     border: none;
 }
-@media (max-width:750px) {
-    .footer-content{
+
+/* Media Queries for Responsive Layout */
+
+/* For tablets and medium devices (width up to 750px) */
+@media (max-width: 750px) {
+    .footer-content {
         display: flex;
         flex-direction: column;
         gap: 35px;
-    }    
-    .footer-copyright{
+    }
+
+    .footer-copyright {
         text-align: center;
+    }
+}
+
+/* For mobile devices (width up to 480px) */
+@media (max-width: 480px) {
+    .footer {
+        padding: 20px 5vw;
+        padding-top: 60px;
+        gap: 15px;
+    }
+
+    .footer-content {
+        gap: 30px;
+    }
+
+    .footer-content-left,
+    .footer-content-right,
+    .footer-content-center {
+        gap: 15px;
+    }
+
+    .footer-content-left li,
+    .footer-content-right li,
+    .footer-content-center li {
+        margin-bottom: 8px;
+    }
+
+    .footer-social-icons img {
+        width: 35px;
+        margin-right: 10px;
+    }
+
+    .footer hr {
+        height: 1px;
+        margin: 15px 0;
+    }
+}
+
+/* For extra small devices (width up to 360px) */
+@media (max-width: 360px) {
+    .footer {
+        padding: 15px 3vw;
+        padding-top: 50px;
+    }
+
+    .footer-content {
+        gap: 25px;
+    }
+
+    .footer-social-icons img {
+        width: 30px;
+        margin-right: 8px;
+    }
+
+    .footer hr {
+        margin: 10px 0;
     }
 }
